# isc-ats-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  entrypoint.prod.sh  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
app/: api_router.py  main.py  models_registry.py  worker.py
scripts/: bootstrap_admin.py  list_users.py  reset_admin_password.py  reset_candidates.py  reset_prod.sh  seed_dev_data.py
tests/: conftest.py  test_access_token_revocation.py  test_ai.py  test_ai_prompt_injection.py  test_analysis_idempotency.py  test_analysis_score_clamp.py  test_application_delete_guards.py  test_application_documents_guard.py  test_application_reject_stage.py  test_applications.py  test_auth_change_password.py  test_auth_login.py  test_auth_register_enumeration.py  test_auth_reset_password.py  test_auth_turnstile.py  test_authorization.py  test_available_slots_route_duration.py  test_bootstrap.py  test_candidate_cedula_required.py  test_candidate_validation.py  test_candidates.py  test_client_ip.py  test_client_sync_service.py  test_comms.py  test_config.py  test_contacts.py  test_disposable_email.py  test_email.py  test_files_upload.py  test_generate_poster_persistence.py  test_guards_http.py  test_image_processing.py  test_internal_roles_slice1.py  test_internal_roles_slice2.py  test_internal_roles_slice4.py  test_internal_roles_slice5.py  test_internal_roles_slice6.py  test_interview_agenda.py  test_interview_available_slots.py  test_interview_mode_a_guard.py  (+46 more)
(+209 files in other folders)
