[project]
name = "isc-ats-backend"
version = "0.1.0"
description = "ISC ATS — Applicant Tracking System backend (FastAPI, Screaming Architecture)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pgvector>=0.3.6",
    "bcrypt>=4.2.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.12",
    "minio>=7.2.7",
    "google-genai>=1.0.0",
    "pypdf>=4.0.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.2.0",
    "httpx>=0.28.0",
    "slowapi>=0.1.10",
    "arq>=0.28.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic version files are machine-generated; don't lint them.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
